--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </main>
 
     <custom-footer></custom-footer>
-    <script src="public/public/assets/js/fooBar.js"></script>
+    <script src="public/assets/js/fooBar.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const menuToggle = document.querySelector('.menu-toggle');
