--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="public/assets/img/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="public/assets/img/favicon/favicon-16x16.png">
     <link rel="manifest" href="public/assets/img/favicon/site.webmanifest">
+    <!--Feather icons-->
+    <script src="https://unpkg.com/feather-icons"></script>
 </head>
 
 <body>
@@ -27,8 +29,8 @@
             </a>
             <div class="nav-items">
               <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about_me.html">About</a></li>
                 <li><a href="#resume">Resume</a></li>
               </ul>
               <div class="mode-switch">
@@ -130,19 +132,22 @@
     </main>
 
     <custom-footer></custom-footer>
+    <script>
+        feather.replace()
+    </script>
     <script src="public/assets/js/fooBar.js"></script>
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
+        document.addEventListener('DOMContentLoaded', function () {
             const menuToggle = document.querySelector('.menu-toggle');
             const nav = document.querySelector('nav ul');
             const modeToggle = document.getElementById('modeToggle');
             const modeIcon = document.getElementById('modeIcon');
 
-            menuToggle.addEventListener('click', function() {
+            menuToggle.addEventListener('click', function () {
                 nav.classList.toggle('show');
             });
 
-            modeToggle.addEventListener('change', function() {
+            modeToggle.addEventListener('change', function () {
                 document.body.classList.toggle('dark-mode');
                 if (document.body.classList.contains('dark-mode')) {
                     modeIcon.textContent = '🌙';
