--- a/about_me.html
+++ b/about_me.html
@@ -82,8 +82,7 @@
             </div>
         </section>
     </main>
-
-    <custom-footer></custom-footer>
+<footer><custom-footer></custom-footer></footer>
 
     <script src="public/assets/js/navBar.js"></script>
     <script src="/Users/luisviol/Desktop/portfolio-2024/public/assets/js/fooBar.js"></script>
