--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
             </div>
         </section>
     </main>
-
-    <custom-footer></custom-footer>
+    <footer><custom-footer></custom-footer></footer>
     <script>
         feather.replace()
     </script>
